--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@
 	"manual.html#VERSIONDIFF".
 
 
+v1.4.0.0-beta-8
+        [1999-05-04]
+
+	* Fixed -s option bug [namazu 594]
+          - masao@ulis.ac.jp (Masao Takaku) - report
 	* Fixed NMZ.[tr].PID bug  [namazu 598]
 	  - [SHIOZAKI Takehiko <takehi-s@ascii.co.jp>] - report
 
