Fixed lockfile related code in mknmz.pl (subtle problem)

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,15 @@
 	"manual.html#VERSIONDIFF".
 
 
+1999-05-14  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>
+	* Fixed lockfile related code in mknmz.pl (subtle problem)
+
+	
+1999-05-07  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>
+	* mknmz.pl.in: Fixed -F & -s option bug [namazu 647]
+	  - [SHIOZAKI Takehiko <takehi-s@ascii.co.jp>] - report
+	
+
 v1.4.0.0-beta-8
         [1999-05-04]
 
