--- a/README
+++ b/README
@@ -17,7 +17,7 @@ Background Information
 
    I have a desire to distribute Namazu to all over the world but
    there are many problems on Internationalization. So perhaps
-   using Namazu in non-Japanese environment is currently little
+   using Namazu in non-Japanese environment is currently a little
    difficult. I am trying to improve now!
 
 Notice
