--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,11 @@
 
 1999-08-13  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>
 
+	* src/mknmz.pl.in: Change index formats of NMZ.[ip] to compress
+	them.
+	* src/search.c, src/hlist.c: Support new formats.
+	  - NOTE: an old index format is no longer supported.
+	* lib/NMZ.result: Modify a little bit.
 	* src/conf.c, src/namazu.c: Modify LIST implementations a bit.
 
 1999-08-12  masao@ulis.ac.jp (Masao Takaku)
