--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@
 	about major changes from previous version, please see 
 	"manual.html#VERSIONDIFF".
 
+1999-08-23  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>
+
+	* src/namazu.c: Implement a suicide code.
+
 1999-08-13  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>
 
 	* src/mknmz.pl.in: Change index formats of NMZ.[ip] to compress
