Makefile.am: Modify install-data-local and dist-hook.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* src/{clnmz.in,rvnmz.in,vfnmz.in}: Removed files.
 	* src/Makefile.am: Add an CLEANFILES entry.
 	* configure.in: Modify AC_OUTPUT according to removed files.
+	* Makefile.am: Modify install-data-local and dist-hook.
 	
 1999-08-25  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
