--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-08-26  Ryuji Abe <raeva@t3.rim.or.jp>
+
+        * Makefile.am: Added namazu.spec to EXTRA_DIST and removed rpm target.
+        * configure.in: Added AC_OBJEXT macro.
+        * namazu.spec.in: See %changelog section.
+
 1999-08-26  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* filter/*, lib/filter.pl, src/mknmz.pl.in: Fix $title probrem.
