Makefile.am: Change dist-hook: to remove CVS directories.

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,7 @@
 	* Makefile.am: Add "File-MMagic" into EXTRA_DIST
 	* Makefile.am: Add "@FILE_MMAGIC@" into SUBDIRS
 	* configure.in: Add codes to chedk "File::MMagic" module.
+	* Makefile.am: Change dist-hook: to remove CVS directories.
 	
 1999-08-25  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
