--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,7 @@
 	* configure.in: Add codes to chedk "File::MMagic" module.
 	* Makefile.am: Change dist-hook: to remove CVS directories.
 	* src/Makefile.am: Add "libdir" macro.
+	* configure.in: Add codes to detect Compress::Zlib module.
 	
 1999-08-25  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
