--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-27  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* Makefile.am, src/Makefile.am: Change packagedir (omit @VERSION@)
+	[namazu-dev 192]
+
 1999-08-26  Ryuji Abe <raeva@t3.rim.or.jp>
 
         * Makefile.am: Added namazu.spec to EXTRA_DIST and removed rpm target.
