--- a/ChangeLog
+++ b/ChangeLog
@@ -3,53 +3,102 @@
 	* Makefile.am, src/Makefile.am: Change packagedir (omit @VERSION@)
 	[namazu-dev 192]
 
+	* src/mknmz.pl: Rename some functions
+
+	* lib/util.pl: Rename some functions
+
+	* lib/util.pl: Remove `package util'
+
+	* src/mknmz.pl.in, filter/*, lib/*: s/util:://g
+
+	* src/mknmz.pl.in: Add show_mini_usage();
+
+	* src/namazu.c: Add show_mini_usage();
+
+	* mknmz, namazu: Change behavior when no arguments are given to
+	show simple messages like "Try `namazu --help' for more options."
+	by using show_mini_usage().
+
+	* ChangeLog: Change a format into double-spaced.
+
+	
 1999-08-26  Ryuji Abe <raeva@t3.rim.or.jp>
 
-        * Makefile.am: Added namazu.spec to EXTRA_DIST and removed rpm target.
-        * configure.in: Added AC_OBJEXT macro.
-        * namazu.spec.in: See %changelog section.
+	* Makefile.am: Added namazu.spec to EXTRA_DIST and removed rpm target.
+        
+	* configure.in: Added AC_OBJEXT macro.
+        
+	* namazu.spec.in: See %changelog section.
 
+	
 1999-08-26  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* filter/*, lib/filter.pl, src/mknmz.pl.in: Fix $title probrem.
 
+	
 1999-08-26  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* Makefile.am: Add an CLEANFILES entry.
+
 	* src/{clnmz.in,rvnmz.in,vfnmz.in}: Removed files.
+
 	* src/Makefile.am: Add an CLEANFILES entry.
+
 	* configure.in: Modify AC_OUTPUT according to removed files.
+
 	* Makefile.am: Modify install-data-local and dist-hook.
+
 	* src/values.c: Set HtmlOutout to 0.
+
 	* src/message.[ch]: Change a variable MSG_MIME_HEADER to macro.
+
 	* src/util.c (die): Print program name in error message.
+
 	* src/configure.in, filter/{man.pl,compress.pl}: Substitute
 	@{GROFF,ZCAT}_PATH@ for @OPT_HELPER_{GROFF,ZCAT}@.
+
 	* src/configure.in: Add codes to make filter/supported.pl.
 	[namazu-dev 199]
+
 	* filter/supported.pl: New file.
+
 	* Makefile.am: Add "supported.pl" into CLEANFILES.
+
 	* Makefile.am: Add CLEANDIRS entry (additional macro)
+
 	* Makefile.am: Add "File-MMagic" into EXTRA_DIST
+
 	* Makefile.am: Add "@FILE_MMAGIC@" into SUBDIRS
+
 	* configure.in: Add codes to chedk "File::MMagic" module.
+
 	* Makefile.am: Change dist-hook: to remove CVS directories.
+
 	* src/Makefile.am: Add "libdir" macro.
+
 	* configure.in: Add codes to detect Compress::Zlib module.
 	
+
 1999-08-25  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* configure.in, src/Makefile.am, src/wdnmz.in:
 	Remove wdnmz.in
+
 	* src/*.[ch]: Rerrange C coding styles.
+
 	* src/{cgi.h,field.h,hlist.h,parser.h,result.h,codeconv.h,form.h,
 	message.h,re.h,search.h,variable.h,conf.h,type.h,wakati.h,enum.h,
 	output.h,usage.h}: New files.
+
 	* src/{re.c,usage.c,message.c,field.c}: New files.
+
 	* lib/NMZ.*: Remove files.
+
 	* template/NMZ.*: New files.
+
 	* Makefile.am, src/Makefile.am: Change a directory structure for
 	installing.
+
 	* src/mknmz.pl.in: Fix conflicted parts. (temporary)
 
 1999-08-25 NOKUBI Takatsugu <knok@daionet.gr.jp>
@@ -64,7 +113,9 @@
 1999-08-23  Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>
 
 	* src/namazu.c: Implement a suicide code.
+
 	* src/mknmz.pl.in: Implement a signal handler for SIGINT (mknmz)
+
 	* src/{hlist.c,result.l,output.c}, lib/NMZ.result: Implement a
 	keyword emphasizing in HTML mode. (rough implementation)
 
