--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 
 	* lib/conf.pl.in: Add %supported variable.
 
+	
 1999-08-27  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* Makefile.am, src/Makefile.am: Change packagedir (omit @VERSION@)
@@ -40,6 +41,8 @@
 	* src/{var.c,var.h,em.h,magic.h,critical.h}: New files.
 
 	* src/*.[ch]: Rearrange many codes.
+
+	* src/mknmz.pl.in: Silence warnings.
 	
 	
 1999-08-26  Ryuji Abe <raeva@t3.rim.or.jp>
