--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-08-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* filter/supported.pl: Remove
+	
+	* Makefile.am (EXTRA_DIST): Add ChangeLog.old.1.gz
+	
 	* ChangeLog.old.gz: Old ChangeLog (separated)
 	
 	* ChangeLog: Separate.
