--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 1999-08-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* src/mknmz.pl.in (load_document): Move a place of codes of code
+	conversion.
+
+	* filter/gfilter.pl: New file.
+	
+	* filter/*.pl: s/filter ($$$$$$$)/filter ($$$$$$)/
+
+	* src/mknmz.pl.in: s/checktype_content/checktype_contents/
+	
 	* src/mknmz.pl.in: Add global variable $TestMode for testing.
 	
 	* configure.in: Add --enable-test option for testing.
