--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-29  masao@ulis.ac.jp (Masao Takaku)
+
+	* src/search.c: Ignore TOO_MUCH_HIT word in phrase query.
+
 1999-08-29  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* src/Makefile.am: Fix lacks of noinst_HEADERS
