src/mknmz.pl.in, lib/var.pl: Change all NMZ.* file name representations using %var::NMZ instead of %var::File.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,15 @@
 1999-08-30  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* lib/codeconv.pl: Fix `tmpname' function name typo.
+
 	* Makefile.am: Ignore test command return value on 
 	  install-data-local target.
 
+	
 1999-08-30  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* src/mknmz.pl.in, lib/var.pl: Change all NMZ.* file name
+	representations using %var::NMZ instead of %var::File. 
 
 	* src/mknmz.pl.in (make_headfoot): Fix $templatedir2.
 	
