--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-08-31  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* src/mknmz.pl.in (generate_uri): Modify a way of applying eval.
+	
 	* src/mknmz.pl.in, lib/usage.pl: Add --update=s and implement
 	its codes.
 
