tknamazu/tknamazu.tcl.in: Use .xpm instead of .gif tknamazu/tknamazu.xpm: New file. tknamazu/tknamazu.gif: Removed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,12 @@
 
 1999-08-31  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* tknamazu/tknamazu.tcl.in: Use .xpm instead of .gif
+
+	* tknamazu/tknamazu.xpm: New file.
+	
+	* tknamazu/tknamazu.gif: Removed.
+	
 	* lib/var.pl: Add serveal media types into %REQUIRE_CODECONV.
 	
 	* src/mknmz.pl.in (generate_uri): Modify a way of applying eval.
