src/result.l: Fix obsolete variable names. src/result.c: Removed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-08-31  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
+	* src/result.l: Fix obsolete variable names.
+	
+	* src/result.c: Removed.
+
 	* lib/wakati.pm: Fix `tmpname' function name typo.
 
 	* lib/var.pl, src/mknmz.pl.in: Add %REQUIRE_CODECONV variable.
